--- a/src/chanks/gallery.html
+++ b/src/chanks/gallery.html
@@ -16,6 +16,9 @@
         <div class="media_gallery">
             <div class="media_gallery_slider">
                 <div class="carousel" id="gallery-slider">
+                    <div class="carousel__slide" data-src="https://fancyapps.com/img/video.mp4" data-fancybox="video-gallery" data-caption="">
+                        <img src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/eAdh/zdrENMw9y/DSC02168.JPG" alt="slide-image" />
+                    </div>
                     <div class="carousel__slide" data-src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/eAdh/zdrENMw9y/DSC02158.JPG" data-fancybox="gallery" data-caption="">
                         <img src="https://thumb.cloud.mail.ru/weblink/thumb/xw1/eAdh/zdrENMw9y/DSC02158.JPG" alt="slide-image" />
                     </div>
